--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -13,18 +13,19 @@
 		<module>utils</module>
 		<module>base-events</module>
 		<module>federate-base</module>
+		<module>c2w-matlab</module>
 	</modules>	
 
   <distributionManagement>
     <repository>
       <id>archiva.internal</id>
       <name>Internal Release Repository</name>
-      <url>http://129.59.105.152:8080/repository/internal/</url>
+      <url>http://129.59.105.227:8088/repository/internal/</url>
     </repository>
     <snapshotRepository>
       <id>archiva.snapshots</id>
       <name>Internal Snapshot Repository</name>
-      <url>http://129.59.105.152:8080/repository/snapshots/</url>
+      <url>http://129.59.105.227:8088/repository/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
   
