--- a/c2w-foundation/federate-base/pom.xml
+++ b/c2w-foundation/federate-base/pom.xml
@@ -7,12 +7,42 @@
   </parent>
   <artifactId>federate-base</artifactId>
   
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.github.maven-nar</groupId>
+        <artifactId>nar-maven-plugin</artifactId>
+        <version>3.2.3</version>
+        <extensions>true</extensions>
+        <executions>
+          <execution>
+            <id>nar-package</id>
+            <goals>
+              <goal>nar-package</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  
   <dependencies>
     <dependency>
       <groupId>org.c2w</groupId>
       <artifactId>base-events</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.c2w</groupId>
+      <artifactId>processid</artifactId>
+      <version>${project.version}</version>
+      <type>nar</type>
+    </dependency>
+    <dependency>
+		<groupId>org.scijava</groupId>
+		<artifactId>native-lib-loader</artifactId>
+		<version>2.1.3</version>
+	</dependency>
   </dependencies>
   
 </project>
