--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -14,18 +14,64 @@
 		<module>base-events</module>
 		<module>federate-base</module>
 		<module>c2w-matlab</module>
+		<module>hla-wrapper</module>
 	</modules>	
 
+	<build>
+		<plugins>
+		  <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-source-plugin</artifactId>
+			  <executions>
+			    <execution>
+			      <id>attach-sources</id>
+			      <goals>
+			        <goal>jar</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+		  </plugin>
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-javadoc-plugin</artifactId>
+			  <executions>
+			    <execution>
+			      <id>attach-javadocs</id>
+			      <goals>
+			        <goal>jar</goal>
+			      </goals>
+			      <configuration>
+			      	<failOnError>false</failOnError>
+			      </configuration>
+			    </execution>
+			  </executions>
+			</plugin>
+		</plugins>
+	</build>
+
+   <repositories>
+	 <repository>
+      <id>archiva.internal</id>
+      <name>Internal Release Repository</name>
+      <url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>
+    </repository>
+    <repository>
+      <id>archiva.snapshots</id>
+      <name>Internal Snapshot Repository</name>
+      <url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>
+    </repository>
+   </repositories>
+	
   <distributionManagement>
     <repository>
       <id>archiva.internal</id>
       <name>Internal Release Repository</name>
-      <url>http://129.59.105.227:8088/repository/internal/</url>
+      <url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>
     </repository>
     <snapshotRepository>
       <id>archiva.snapshots</id>
       <name>Internal Snapshot Repository</name>
-      <url>http://129.59.105.227:8088/repository/snapshots/</url>
+      <url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
   
