only one .gitignore file in root dir; added IntelliJ ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# maven related ignores
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -58,13 +59,13 @@ local.properties
 # Code Recommenders
 .recommenders/
 
+# mac
 .DS_Store
 .AppleDouble
 .LSOverride
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -84,3 +85,6 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# IntelliJ
+.idea
+*.iml
