--- a/c2w-examples/pom.xml
+++ b/c2w-examples/pom.xml
@@ -16,6 +16,20 @@
 		<c2w.version>0.0.1-SNAPSHOT</c2w.version>
 	</properties>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 	<distributionManagement>
 		<repository>
 			<id>archiva.internal</id>
