Fixed: generated base-event classes

--- a/c2w-examples/HelloWorld/pom.xml
+++ b/c2w-examples/HelloWorld/pom.xml
@@ -10,8 +10,8 @@
   <dependencies>
     <dependency>
       <groupId>org.c2w</groupId>
-      <artifactId>HelloWorld_base</artifactId>
-      <version>${c2w.version}</version>
+      <artifactId>HelloWorld-base-java</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
   
