--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -20,6 +20,7 @@
 		<module>federation-manager</module>
 		<module>c2w-gui</module>
 		<module>c2w-matlab</module>	
+		<module>fedmanager-exec</module>	
 	</modules>	
 
 	<build>
