--- a/c2w-foundation/c2w-logging/pom.xml
+++ b/c2w-foundation/c2w-logging/pom.xml
@@ -3,7 +3,7 @@
    <parent>
   	<groupId>org.c2w</groupId>
   	<artifactId>c2w-foundation</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
+  	<version>0.1.0</version>
   </parent>
   <artifactId>logging</artifactId>
   <build>
@@ -13,8 +13,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source/>
-          <target/>
+          <source />
+          <target />
         </configuration>
       </plugin>
     </plugins>
