--- a/c2w-examples/pom.xml
+++ b/c2w-examples/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.c2w</groupId>
 	<artifactId>c2w-examples</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>C2 Windtunnel Java Examples</name>
 	<description>Examples of C2 Windtunnel Java RTI and Federates</description>
@@ -12,7 +12,7 @@
 	</modules>
 
 	<properties>
-		<c2w.version>0.0.1-SNAPSHOT</c2w.version>
+		<c2w.version>0.2.0-SNAPSHOT</c2w.version>
 	</properties>
 
 	<build>
