--- a/c2w-foundation/fedmanager-exec/pom.xml
+++ b/c2w-foundation/fedmanager-exec/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.c2w</groupId>
 	<artifactId>FederationManager_exec</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
-		<c2w.version>0.1.0</c2w.version>
+		<c2w.version>${project.version}</c2w.version>
 		<nar.version>3.3.0</nar.version>
 	</properties>
 
