--- a/c2w-foundation/hla-wrapper/pom.xml
+++ b/c2w-foundation/hla-wrapper/pom.xml
@@ -3,16 +3,9 @@
 	<parent>
 		<groupId>org.c2w</groupId>
 		<artifactId>c2w-foundation</artifactId>
-		<version>0.1.0</version>
+		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>hla-wrapper</artifactId>
-	<dependencies>
-		<dependency>
-			<groupId>org.porticoproject</groupId>
-			<artifactId>portico</artifactId>
-			<version>2.0.2</version>
-		</dependency>
-	</dependencies>
 
 
 </project>
