--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.c2w</groupId>
   <artifactId>c2w-foundation</artifactId>
-  <version>0.1.0</version>
+  <version>0.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>C2 Windtunnel Java Foundation</name>
   <description>Foundation packages and classes of C2 Windtunnel Java RTI and Federates</description>
@@ -22,6 +22,15 @@
 		<module>c2w-matlab</module>	
 		<module>fedmanager-exec</module>	
 	</modules>	
+
+	<dependencies>
+		<dependency>
+			<groupId>org.porticoproject</groupId>
+			<artifactId>portico</artifactId>
+			<version>2.0.2</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
