--- a/c2w-examples/pom.xml
+++ b/c2w-examples/pom.xml
@@ -28,17 +28,29 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>archiva.internal</id>
+			<name>Internal Release Repository</name>
+			<!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots</url>-->
+			<url>http://10.0.2.15:8080/repository/snapshots/</url>
+		</repository>
+
+	</repositories>
 	
 	<distributionManagement>
 		<repository>
 			<id>archiva.internal</id>
 			<name>Internal Release Repository</name>
-			<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>
+			<!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
+			<url>http://10.0.2.15:8080/repository/internal/</url>
 		</repository>
 		<snapshotRepository>
 			<id>archiva.snapshots</id>
 			<name>Internal Snapshot Repository</name>
-			<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>
+			<!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
+			<url>http://10.0.2.15:8080/repository/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 
