--- a/c2w-examples/HelloWorld_Simple/HelloWorld_Java_generated/java-federates/HelloWorld-base-java/pom.xml
+++ b/c2w-examples/HelloWorld_Simple/HelloWorld_Java_generated/java-federates/HelloWorld-base-java/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.nistdemo.exp2</groupId>
+    <groupId>org.c2w.Helloworld_simple_java</groupId>
     <artifactId>HelloWorld-java</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -10,14 +10,14 @@
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
-      <groupId>org.nistdemo.exp2</groupId>
+      <groupId>org.c2w.Helloworld_simple_java</groupId>
       <artifactId>HelloWorld-rti-java</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.c2w</groupId>
       <artifactId>federate-base</artifactId>
-      <version>0.2.0-SNAPSHOT</version>
+      <version>0.3.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
