--- a/c2w-examples/HelloWorld_Simple/HelloWorld_Java_generated/java-federates/pom.xml
+++ b/c2w-examples/HelloWorld_Simple/HelloWorld_Java_generated/java-federates/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.nistdemo.exp2</groupId>
+    <groupId>org.c2w.Helloworld_simple_java</groupId>
     <artifactId>HelloWorld_root</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>org.porticoproject</groupId>
       <artifactId>portico</artifactId>
-      <version>2.0.2</version>
+      <version>2.1.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
