--- a/c2w-examples/HelloWorld_Simple/HelloWorld_Java_impl/pom.xml
+++ b/c2w-examples/HelloWorld_Simple/HelloWorld_Java_impl/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.nistdemo.exp2</groupId>
-    <artifactId>c2w-examples</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <!--<version>${project.version}</version>-->
-  </parent>
-
+  <!--<parent>-->
+    <!--<groupId>org.nistdemo.exp2</groupId>-->
+    <!--<artifactId>c2w-examples</artifactId>-->
+    <!--<version>0.0.1-SNAPSHOT</version>-->
+    <!--&lt;!&ndash;<version>${project.version}</version>&ndash;&gt;-->
+  <!--</parent>-->
+  <groupId>org.c2w.Helloworld_simple_java</groupId>
   <artifactId>HelloWorld</artifactId>
-  
+  <version>0.0.1-SNAPSHOT</version>
   <dependencies>
     <dependency>
-      <groupId>org.nistdemo.exp2</groupId>
+      <groupId>org.c2w.Helloworld_simple_java</groupId>
       <artifactId>HelloWorld-base-java</artifactId>
       <version>0.0.1-SNAPSHOT</version>
 
@@ -19,13 +19,23 @@
     <dependency>
     	<groupId>org.porticoproject</groupId>
     	<artifactId>portico</artifactId>
-    	<version>2.0.2</version>
-
+    	<version>2.1.0</version>
     	<!--<scope>provided</scope>-->
     </dependency>
   </dependencies>
 
-
+  <repositories>
+    <repository>
+      <id>archiva.internal</id>
+      <name>Internal Release Repository</name>
+      <url>http://10.0.2.15:8080/repository/internal/</url>
+    </repository>
+    <repository>
+      <id>archiva.snapshots</id>
+      <name>Internal Snapshot Repository</name>
+      <url>http://10.0.2.15:8080/repository/snapshots/</url>
+    </repository>
+  </repositories>
 
   <distributionManagement>
     <repository>
