--- a/c2w-examples/HelloWorld_Simple/HelloWorld_Java_Deployment/pom.xml
+++ b/c2w-examples/HelloWorld_Simple/HelloWorld_Java_Deployment/pom.xml
@@ -156,12 +156,12 @@
 		<repository>
 			<id>archiva.internal</id>
 			<name>Internal Release Repository</name>
-			<url>http://10.0.2.15:8080/repository/internal/</url>
+			<url>http://cpswtng_archiva:8080/repository/internal/</url>
 		</repository>
 		<repository>
 			<id>archiva.snapshots</id>
 			<name>Internal Snapshot Repository</name>
-			<url>http://10.0.2.15:8080/repository/snapshots/</url>
+			<url>http://cpswtng_archiva:8080/repository/snapshots/</url>
 		</repository>
 	</repositories>
 
@@ -169,12 +169,12 @@
 		<pluginRepository>
 			<id>archiva.internal</id>
 			<name>Internal Release Repository</name>
-			<url>http://10.0.2.15:8080/repository/internal/</url>
+			<url>http://cpswtng_archiva:8080/repository/internal/</url>
 		</pluginRepository>
 		<pluginRepository>
 			<id>archiva.snapshots</id>
 			<name>Internal Snapshot Repository</name>
-			<url>http://10.0.2.15:8080/repository/snapshots/</url>
+			<url>http://cpswtng_archiva:8080/repository/snapshots/</url>
 		</pluginRepository>
 	</pluginRepositories>
 
@@ -182,12 +182,12 @@
 		<repository>
 			<id>archiva.internal</id>
 			<name>Internal Release Repository</name>
-			<url>http://10.0.2.15:8080/repository/internal/</url>
+			<url>http://cpswtng_archiva:8080/repository/internal/</url>
 		</repository>
 		<snapshotRepository>
 			<id>archiva.snapshots</id>
 			<name>Internal Snapshot Repository</name>
-			<url>http://10.0.2.15:8080/repository/snapshots/</url>
+			<url>http://cpswtng_archiva:8080/repository/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 	
