--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -78,13 +78,13 @@
       <id>archiva.internal</id>
       <name>Internal Release Repository</name>
       <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
-	  <url>http://10.0.2.15:8080/repository/internal/</url>
+	  <url>http://cpswtng_archiva:8080/repository/internal/</url>
     </repository>
     <repository>
       <id>archiva.snapshots</id>
       <name>Internal Snapshot Repository</name>
       <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
-	  <url>http://10.0.2.15:8080/repository/snapshots/</url>
+	  <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
     </repository>
    </repositories>
 	
@@ -93,13 +93,13 @@
       <id>archiva.internal</id>
       <name>Internal Release Repository</name>
       <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
-	   <url>http://10.0.2.15:8080/repository/internal/</url>
+	   <url>http://cpswtng_archiva:8080/repository/internal/</url>
     </repository>
     <snapshotRepository>
       <id>archiva.snapshots</id>
       <name>Internal Snapshot Repository</name>
       <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
-	  <url>http://10.0.2.15:8080/repository/snapshots/</url>
+	  <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
   
