--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -20,8 +20,9 @@
 		<module>federation-manager</module>
 		<module>c2w-gui</module>
 		<module>c2w-matlab</module>	
-		<module>fedmanager-exec</module>	
-	</modules>	
+		<module>fedmanager-exec</module>
+        <module>fedmanager-host</module>
+    </modules>
 
 	<dependencies>
 		<dependency>
