--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -31,6 +31,11 @@
 			<version>2.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.14</version>
+		</dependency>
 	</dependencies>
 
 	<build>
