--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -36,6 +36,13 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
