--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -1,125 +1,129 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.c2w</groupId>
-  <artifactId>c2w-foundation</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>C2 Windtunnel Java Foundation</name>
-  <description>Foundation packages and classes of C2 Windtunnel Java RTI and Federates</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.c2w</groupId>
+    <artifactId>c2w-foundation</artifactId>
+    <version>0.3.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>C2 Windtunnel Java Foundation</name>
+    <description>Foundation packages and classes of C2 Windtunnel Java RTI and Federates</description>
 
-	<modules>
-		<module>hla-wrapper</module>
-		<module>c2w-logging</module>
-		<module>root</module>
-		<module>base-events</module>
-		<module>utils</module>
-		<module>federate-base</module>
-		<module>simple-federates</module>
-		<module>c2w-coa</module>
-		<module>c2w-coa-gui</module>
-		<module>federation-manager</module>
-		<module>c2w-gui</module>
-		<module>c2w-matlab</module>	
-		<module>fedmanager-exec</module>
+    <modules>
+        <module>hla-wrapper</module>
+        <module>c2w-logging</module>
+        <module>root</module>
+        <module>base-events</module>
+        <module>utils</module>
+        <module>federate-base</module>
+        <module>simple-federates</module>
+        <module>c2w-coa</module>
+        <module>c2w-coa-gui</module>
+        <module>federation-manager</module>
+        <module>c2w-gui</module>
+        <module>c2w-matlab</module>
+        <module>fedmanager-exec</module>
         <module>fedmanager-host</module>
     </modules>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.porticoproject</groupId>
-			<artifactId>portico</artifactId>
-			<version>2.1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.3.1</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.porticoproject</groupId>
+            <artifactId>portico</artifactId>
+            <version>2.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			  <artifactId>maven-source-plugin</artifactId>
-			  <executions>
-			    <execution>
-			      <id>attach-sources</id>
-			      <goals>
-			        <goal>jar</goal>
-			      </goals>
-			    </execution>
-			  </executions>
-		  </plugin>
-		  <plugin>
-			  <groupId>org.apache.maven.plugins</groupId>
-			  <artifactId>maven-javadoc-plugin</artifactId>
-			  <executions>
-			    <execution>
-			      <id>attach-javadocs</id>
-			      <goals>
-			        <goal>jar</goal>
-			      </goals>
-			      <configuration>
-			      	<failOnError>false</failOnError>
-			      </configuration>
-			    </execution>
-			  </executions>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <failOnError>false</failOnError>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-   <repositories>
-	 <repository>
-      <id>archiva.internal</id>
-      <name>Internal Release Repository</name>
-      <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
-	  <url>http://cpswtng_archiva:8080/repository/internal/</url>
-    </repository>
-    <repository>
-      <id>archiva.snapshots</id>
-      <name>Internal Snapshot Repository</name>
-      <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
-	  <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
-    </repository>
-   </repositories>
-	
-  <distributionManagement>
-    <repository>
-      <id>archiva.internal</id>
-      <name>Internal Release Repository</name>
-      <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
-	   <url>http://cpswtng_archiva:8080/repository/internal/</url>
-    </repository>
-    <snapshotRepository>
-      <id>archiva.snapshots</id>
-      <name>Internal Snapshot Repository</name>
-      <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
-	  <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
-  
-  <scm>
-  <connection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java</connection>
-  <developerConnection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java</developerConnection>
-  <url>https://vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java/folder/master/</url>
-  </scm>
-  
+    <repositories>
+        <repository>
+            <id>archiva.internal</id>
+            <name>Internal Release Repository</name>
+            <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
+            <url>http://cpswtng_archiva:8080/repository/internal/</url>
+        </repository>
+        <repository>
+            <id>archiva.snapshots</id>
+            <name>Internal Snapshot Repository</name>
+            <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
+            <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>archiva.internal</id>
+            <name>Internal Release Repository</name>
+            <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
+            <url>http://cpswtng_archiva:8080/repository/internal/</url>
+        </repository>
+        <snapshotRepository>
+            <id>archiva.snapshots</id>
+            <name>Internal Snapshot Repository</name>
+            <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
+            <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <scm>
+        <connection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java</connection>
+        <developerConnection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java
+        </developerConnection>
+        <url>https://vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java/folder/master/</url>
+    </scm>
+
 </project>
